magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.css
.dialog-header, .dialog-footer, .dialog-description, .dialog-error {
    padding: 12px 16px 12px 25px;
}

.dialog-description, .dialog-footer, .dialog-content, .dialog-error {
    border-top: 2px solid black;
}

.dialog-header {
    background-color: #666666;
}

.dialog-header {
    color: #AABF2E;
    display: inline;
    font-size: 18px;
    line-height: 18px;
    display: block;
}

.dialog-description {
    background: none repeat scroll 0 0 #C1D8DF;
}

.dialog-error {
	background: none repeat scroll 0 0 #9A3333;
    color: white;
}

.dialog-description span {
    margin-right: 35px;
}

.dialog-panel {
    background: none repeat scroll 0 0 #E6E6E6;
    border: medium none;
    left: 50%;
    margin: auto auto auto -360px;
    padding: 0;
    position: absolute;
    width: 720px;
    z-index: 1000;
}
.dialog-footer {
    background: none repeat scroll 0 0 #CCCCCC;
    text-align: right;
}

.dialog-close, .dialog-help {
    float: right;
    margin-right: 0;
}

button.btn-dialog {
    font-size: 12px;
    margin-left: 5px;
    padding: 4px 12px;
    text-transform: uppercase;
    cursor: pointer;
    background: none repeat scroll 0 0 #666666;
    border: medium none;
    color: #FFFFFF;
}

button.btn-dialog-commit {
    float: right;
    background: none repeat scroll 0 0 #689600;
}

button.btn-dialog-close {
    background: url("img/icon-close-16.png") no-repeat scroll 0 0 transparent;
    border: none;
    display: inline-block;
    height: 24px;
    width: 24px;
    margin: 0;
    padding: 4px;
    float: right;
    margin-right: 0;

}

button.btn-dialog-close.green {
    background: url("img/icon-close-green-16.png") no-repeat scroll 0 0 transparent;
}

button.btn-dialog-help {
    background: url("img/icon-help.png") no-repeat scroll 1px 1px transparent;
    border: none;
    height: 20px;
    width: 20px;
    margin: 0 6px 0 0;
    padding: 1px;
    float: right;
    margin-right: 0;
}

/* Field styling */
.dialog-panel .field-container {
    color: #999999;
}

.dialog-panel input[type="text"], .dialog-panel textarea {
	display: inline-block;
    border: 1px solid #CCCCCC;
    color: #999999;
    height: 26px;
    padding-left: 10px;
    background: none #FFF;
    border-radius: 0;
    margin: 0;
}

.v-dialog-field-label {
    display: inline-block;
    padding-right: 10px;
    text-align: right;
    width: 140px;
}


.v-dialog-field-container {
	display: block;
    position: relative;
    vertical-align: top;
}

.validation-hilight {
    border: 2px solid #9A3333;
    padding: 3px;
}

.v-dialog-field-section {
	padding-bottom: 12px;
}

.v-dialog-layout {
	background-color: #E6E6E6;
	color: #999999;
	font: sans-serif;
	font-size: 13px;
}

.v-dialog-layout .v-dialog-field {
    width: 425px;
    display: inline-block;
}

.action-dialog-help {
    background: url("img/icons/icon-help.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline-block;
    height: 20px;
    margin: 0 6px 0 0;
    padding: 1px;
    vertical-align: middle;
    width: 20px;
}

.triangle {
}

.validation-message-inline, .help-message-inline {
    margin-bottom: 10px;
    padding-top: 5px;
    position: relative;
}

.validation-message, .help-message {
    background: none repeat scroll 0 0 #9A3333;
    color: white;
    display: block;
    padding: 10px;
}

.help-message {
    background: none repeat scroll 0 0 #C1D8DF;
    color: black;
}

.triangle.red  path {
	fill: #9A3333;
}

.triangle.blue  path {
	fill: #C1D8DF;
}

.triangle {
	text-align: center;
}

.icon-error-white {
    background: url("img/icons/icon-error-white.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline-block;
    height: 20px;
    margin: 0 6px 0 0;
    padding: 1px;
    vertical-align: middle;
    width: 20px;
}

select:focus, input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
    border: 1px solid #93BAC6;
    box-shadow: 0 0 1px 0 #93BAC6;
    color: #777777;
}

.action-jump-to-next-error {
	display: inline;
	color: #999999 !important;
	background: none;
	-moz-user-select: text;
	border: none;
	padding-left: 5px;
}

.action-jump-to-next-error:HOVER {
	color: #FFFFFF !important;
}

.action-jump-to-next-error:FOCUS {
	outline-offset: -3px;
}


.icon-error, .action-validation {
    background: url("img/icons/icon-error-red.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline-block;
    height: 20px;
    margin: 0 6px 0 0;
    padding: 1px;
    vertical-align: middle;
    width: 20px;
}

.action-dialog-help {
    background: url("img/icons/icon-help.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline-block;
    height: 20px;
    margin: 0 6px 0 0;
    padding: 1px;
    vertical-align: middle;
    width: 20px;
}

fieldset {
    border: 0 none;
}

